--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,15 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.footer{
+  .layout {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .layout main {
+    flex-grow: 1;
+  }
+}
