--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,25 +18,13 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
   overflow: hidden;
-}
-
-.footer {
-  .layout {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .layout main {
-    flex-grow: 1;
-  }
 }
 
 .leaflet-speeddial {
