Ajustando exibicao de cenas ao trocar tempo

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  overflow: auto;
+}
+body:has(#studioMapa) {
   overflow: hidden;
 }
 
