--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,14 @@ body:has(#studioMapa) {
   border: none !important;
 }
 
+.image-overlay-subjx {
+  pointer-events: auto !important;
+}
+
+.sjx-hdl {
+  cursor: pointer;
+}
+
 #studioMapa .MuiSpeedDialAction-staticTooltipLabel {
   width: max-content;
 }
