--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   --mui-palette-primary-main: #1976d2;
   --mui-palette-primary-light: #42a5f5;
@@ -37,6 +33,9 @@ body:has(#studioMapa) {
 .leaflet-speeddial {
   border: none !important;
 }
+.leaflet-speeddial-full-width {
+  width: 100% !important;
+}
 
 .image-overlay-subjx {
   pointer-events: auto !important;
@@ -63,7 +62,7 @@ form > *:first-child {
 }
 
 .leaflet-bottom.leaflet-left {
-  width: 100%;
+  width: 90%;
 }
 
 .leaflet-control.leaflet-timeline-control {
