--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --mui-palette-primary-main: #1976d2;
   --mui-palette-primary-light: #42a5f5;
@@ -192,11 +196,4 @@ form > *:first-child {
   .MuiFormLabel-root {
     top: 1vw;
   }
-}
-
-#exemplos {
-}
-
-.mt-4 {
-  margin-top: 4px;
 }
